<resources>
    <string name="error_no_internet">No Internet connection\navailable</string>
    <string name="error_no_data">No data available.</string>
    <string name="error_history_no_data_no_connection">No Internet connection. Could not load data.</string>
    <string name="main_dialog_registration_title">Registration…</string>
    <string name="main_dialog_registration_text">Client is being registered. Please wait…</string>
    <string name="main_dialog_reload_title">Reloading…</string>
    <string name="main_dialog_reload_text">Reloading data; please wait…</string>
    <string name="preferences">Settings</string>
    <string name="preferences_category_test">Test settings</string>
    <string name="preferences_expert">Expert settings</string>
    <string name="preferences_location_settings">Location</string>
    <string name="preferences_location_settings_sum">Change location settings</string>
    <string name="preferences_no_gps">No GPS</string>
    <string name="preferences_no_gps_sum">Do not use GPS during test</string>
    <string name="preferences_tag">Tag</string>
    <string name="preferences_tag_sum">Add a custom test tag to every test</string>
    <string name="preferences_skip_qos">Skip QoS</string>
    <string name="preferences_skip_qos_sum">Skip QoS tests</string>
    <string name="preferences_expert_mode">Expert mode</string>
    <string name="preferences_expert_mode_sum">Show advanced settings and information</string>
    <string name="preferences_loop_mode">Loop mode</string>
    <string name="preferences_loop_mode_sum">New test when waiting time has elapsed or distance is covered. Max 2 days.</string>
    <string name="preferences_loop_mode_max_tests">Number of tests</string>
    <string name="preferences_loop_mode_max_tests_sum">Number of tests in loop mode</string>
    <string name="preferences_loop_mode_min_delay">Minimum waiting time</string>
    <string name="preferences_loop_mode_min_delay_sum">Minimum waiting time (in seconds) between two tests in loop mode</string>
    <string name="preferences_loop_mode_waiting_time">Waiting time</string>
    <string name="preferences_loop_mode_waiting_time_sum">Waiting time (in minutes) between two tests in loop mode</string>
    <string name="preferences_loop_mode_waiting_time_title">Waiting time (min)</string>
    <string name="preferences_loop_mode_movement">Distance</string>
    <string name="preferences_loop_mode_movement_sum">Distance (in meters) between two tests in loop mode</string>
    <string name="preferences_loop_mode_movement_title">Distance (m)</string>
    <string name="preferences_loop_mode_gps">Use GPS in loop mode</string>
    <string name="preferences_loop_mode_gps_sum">Use GPS between two tests in loop mode</string>
    <string name="preferences_loop_mode_wake_lock">Loop WakeLock</string>
    <string name="preferences_loop_mode_wake_lock_sum">Workaround for some devices: Leaves the display on to keep GPS working</string>
    <string name="preferences_loop_mode_opportunistic">Restrict measurements</string>
    <string name="preferences_loop_mode_opportunistic_sum">Only measure at certain locations</string>
    <string-array name="preferences_loop_mode_opportunistic_list">
        <item>no-restriction</item>
        <item>some</item>
        <item>any</item>
    </string-array>
    <string-array name="preferences_loop_mode_opportunistic_list_labels">
        <item>No restriction</item>
        <item>Measure only if few tests in proximity</item>
        <item>Measure only if no tests in proximity</item>
    </string-array>
    <string name="preferences_ndt">NDT</string>
    <string name="preferences_ndt_sum">Activate extended test</string>
    <string name="preferences_ipv4_only">IPv4 only</string>
    <string name="preferences_ipv4_only_sum">Never use IPv6</string>
    <string name="preferences_radio_info">Radio info</string>
    <string name="preferences_radio_info_sum">Details on radio configuration</string>
    <string name="preferences_radio_info_warning_title">Radio settings</string>
    <string name="preferences_radio_info_warning_message">Be careful: Changing advanced settings of your radio configuration might be harmful to the stability and performance of your device.</string>
    <string name="preferences_radio_info_warning_button">I accept the risk</string>
    <string name="preferences_category_developer">Development</string>
    <string name="preferences_category_loop_mode">Loop mode settings</string>
    <string name="preferences_category_dev_loop_mode" translatable="false" >Developer loop mode settings</string>
    <string name="preferences_category_loop_mode_heading">Loop mode</string>
    <string name="preferences_category_developer_control_server">Control server</string>
    <string name="preferences_category_developer_map_server">Map server</string>
    <string name="preferences_category_developer_qos_server">QoS server</string>
    <string name="preferences_category_developer_debug">Debugging</string>
    <string name="preferences_dev_control_override">Override control server</string>
    <string name="preferences_dev_control_override_sum">Activate custom control server settings</string>
    <string name="preferences_dev_control_host">Control host</string>
    <string name="preferences_dev_control_host_sum">Override address of the control server</string>
    <string name="preferences_dev_control_port">Control port</string>
    <string name="preferences_dev_control_port_sum">Override port of the control server</string>
    <string name="preferences_dev_control_ssl">Control server SSL</string>
    <string name="preferences_dev_control_ssl_sum">Use encrypted connection to control server</string>
    <string name="preferences_dev_map_override">Override map server</string>
    <string name="preferences_dev_map_override_sum">Activate custom map server settings</string>
    <string name="preferences_dev_map_host">Map host</string>
    <string name="preferences_dev_map_host_sum">Override address of the map server</string>
    <string name="preferences_dev_map_port">Map port</string>
    <string name="preferences_dev_map_port_sum">Override port of the map server</string>
    <string name="preferences_dev_map_ssl">Map server SSL</string>
    <string name="preferences_dev_map_ssl_sum">Use encrypted connection to map server</string>
    <string name="preferences_dev_qos_ssl" >QoS server SSL</string>
    <string name="preferences_dev_qos_ssl_sum" >Use encrypted connection to QoS server</string>
    <string name="preferences_dev_debug_sysout" >Store error output in file</string>
    <string name="preferences_dev_debug_sysout_sum" >Stores error output in a text file located in the "qosdebug" folder</string>
    <string name="preferences_dev_huge_signal" translatable="false" >Show huge signal</string>
    <string name="preferences_dev_huge_signal_sum" translatable="false" >Shows signal in huge font on start screen</string>
    <string name="preferences_default_control_hostname" translatable="false" >dev.netztest.at</string>
    <string name="menu_button_start">START</string>
    <string name="menu_button_loop">LOOP</string>
    <string name="menu_button_title_page">Home</string>
    <string name="menu_button_map">Map</string>
    <string name="menu_button_history">History</string>
    <string name="menu_button_help">Help</string>
    <string name="menu_button_statistics">Statistics</string>
    <string name="menu_button_settings">Settings</string>
    <string name="menu_button_about">Info</string>
    <string name="menu_button_share">Share</string>
    <string name="news_title">News</string>
    <string name="news_no_message">No message text.</string>
    <string name="about_version_title">Version</string>
    <string name="about_clientid_title">Client UUID</string>
    <string name="about_clientid_toast">Client UUID has been copied to clipboard.</string>
    <string name="about_web_title">Web</string>
    <string name="about_email_title">Email</string>
    <string name="about_email_sending">Sending email…</string>
    <string name="about_terms_title">Privacy Policy</string>
    <string name="about_terms_line1">Privacy policy and terms of use</string>
    <string name="about_git_title" translatable="false">Git Repository</string>
    <string name="about_git_line1" translatable="false">https://github.com/rtr-nettest/</string>
    <string name="about_git_link" translatable="false">https://github.com/rtr-nettest/</string>
    <string name="about_dev_title">Development</string>
    <string name="about_dev_line1" translatable="false">alladin-IT GmbH et al</string>
    <string name="about_dev_line2" translatable="false">https://www.alladin.at/</string>
    <string name="about_dev_link" translatable="false">https://www.alladin.at/</string>
    <string name="about_gms_legal_title" translatable="false">Google Play</string>
    <string name="about_gms_legal_line1">Google Play Services Legal Notice</string>
    <string name="about_test_counter_title">Test Counter</string>
   	<string name="about_hidden_feature_dialog_title">Code</string>
    <string name="about_hidden_feature_dialog_enter_code">Please enter the code:</string>
    <string name="about_hidden_feature_dialog_msg_deactivated">Deactivated.</string>
    <string name="about_hidden_feature_dialog_msg_activated">Activated.</string>
    <string name="about_expert_mode_activated">Expert mode available.</string>
    <string name="about_expert_mode_deactivated">Expert mode removed.</string>
    <string name="about_server_selection_activated">Server selection available.</string>
    <string name="about_server_selection_deactivated">Server selection removed.</string>
    <string name="about_hidden_feature_dialog_msg_try_again">Try again!</string>
    <string name="about_dev_mode_activated" translatable="false">Developer options available.</string>
    <string name="about_dev_mode_deactivated" translatable="false">Developer options removed.</string>
    <string name="terms">Privacy Policy and Terms of Use</string>
    <string name="terms_accept_button">Agree</string>
    <string name="terms_accept_button_continue">Continue</string>
    <string name="terms_decline_button">Decline</string>
    <string name="terms_ndt_header">Optional, more comprehensive NDT-Test</string>
    <string name="terms_ndt_accept_text"><b>I wish to run the optional NDT-Test.</b></string>
    <string name="terms_ndt_back_button">Back</string>
    <string name="terms_ndt_accept_button">Continue</string>
    <string name="terms_check_accept_button">Accept</string>
    <string name="terms_check_decline_button">Decline</string>
    <string name="history_button_sync">Sync</string>
    <string name="history_button_filter">Filter</string>
    <string name="history_device">Device</string>
	<string name="history_type">Access</string>
	<string name="history_date">Date</string>
	<string name="history_down">Down\nMbps</string>
	<string name="history_up">Up\nMbps</string>
	<string name="history_ping">Ping\nms</string>
	<string name="sync_enter_code_button">Enter Code</string>
	<string name="sync_enter_code_header">Code entry</string>
	<string name="sync_enter_code_msg">Code</string>
	<string name="sync_enter_code_desc">Please enter the code you received on your other device.</string>
	<string name="sync_request_code_header">Your synchronisation code is:</string>
	<string name="sync_request_code_msg">Retrieving code…</string>
	<string name="sync_request_code_desc">Please enter the code shown above on your other device to synchronise them.</string>
	<string name="server_selection">Server selection</string>
	<string name="loop_mode_max_test">Number of tests</string>
	<string name="loop_mode_info">You are about to start tests in loop mode. The distance is set to {0,number,#} meters. The waiting time is {1,number,#} minutes.</string>
	<string name="go">Start tests</string>
    <string name="go_to_settings">Change settings</string>
</resources>