<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2013-2016 alladin-IT GmbH
  Copyright 2013-2016 Rundfunk und Telekom Regulierungs-GmbH (RTR-GmbH)
  
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
  
    http://www.apache.org/licenses/LICENSE-2.0
  
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
    <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
        
        <PreferenceCategory android:title="@string/preferences_category_loop_mode" android:layout="@layout/preferences_category" android:key="loop_mode_group">
            
            <CheckBoxPreference
                android:key="loop_mode"
                android:title="@string/preferences_loop_mode" 
                android:summary="@string/preferences_loop_mode_sum"
                android:layout="@layout/preferences_item"/>
            
            <EditTextPreference
                android:key="loop_mode_max_delay"
                android:title="@string/preferences_loop_mode_waiting_time"
                android:summary="@string/preferences_loop_mode_waiting_time_sum"
                android:layout="@layout/preferences_item"
                android:inputType="number"
                android:defaultValue="@integer/default_loop_max_delay"
                android:dialogTitle="@string/preferences_loop_mode_waiting_time_title"
                />
            
            <EditTextPreference
                android:key="loop_mode_max_movement"
                android:title="@string/preferences_loop_mode_movement"
                android:summary="@string/preferences_loop_mode_movement_sum"
                android:layout="@layout/preferences_item"
                android:inputType="number"
                android:defaultValue="@integer/default_loop_max_movement"
                android:dialogTitle="@string/preferences_loop_mode_movement_title"
                />
            <ListPreference
                android:key="loop_mode_opportunistic"
                android:title="@string/preferences_loop_mode_opportunistic"
                android:summary="@string/preferences_loop_mode_opportunistic_sum"
                android:defaultValue="no-restriction"
                android:entries="@array/preferences_loop_mode_opportunistic_list_labels"
                android:entryValues="@array/preferences_loop_mode_opportunistic_list"
                />
        </PreferenceCategory>

</PreferenceScreen>
