<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/action_title_page"
          android:icon="@drawable/ic_action_home"
          android:title="@string/menu_button_title_page"
          android:showAsAction="ifRoom" />

    <item android:id="@+id/action_history"
          android:icon="@drawable/ic_action_history"
          android:title="@string/menu_button_history"
          android:showAsAction="ifRoom" />

    <item android:id="@+id/action_help"
          android:icon="@drawable/ic_action_help"
          android:title="@string/menu_button_help"
          android:showAsAction="ifRoom" />
    
    <item android:id="@+id/action_info"
          android:icon="@drawable/ic_action_about"
          android:title="@string/menu_button_about"
          android:showAsAction="ifRoom" />
    
    <item android:id="@+id/action_stats"
          android:icon="@drawable/ic_action_stat"
          android:title="@string/menu_button_statistics"
          android:showAsAction="ifRoom" />

    
	<item android:id="@+id/action_map"
          android:icon="@drawable/ic_action_map"
          android:title="@string/menu_button_map"
          android:showAsAction="ifRoom" />

	<item android:id="@+id/action_settings"
          android:icon="@drawable/ic_action_settings"
          android:title="@string/menu_button_settings"
          android:showAsAction="ifRoom" />
	
</menu>
