<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2013-2014 alladin-IT GmbH
  
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
  
    http://www.apache.org/licenses/LICENSE-2.0
  
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <include
        android:id="@+id/syncHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        layout="@layout/header" 
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/header"
        android:layout_above="@+id/code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sync_request_code_header"
        android:gravity="center"
        android:padding="10dp"
       	style="@style/textMediumLight" />

    <TextView
        android:id="@+id/code"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sync_request_code_msg"
        android:gravity="center"
        android:padding="10dp"
        style="@style/textLargeLight" />
  

    <TextView
        android:id="@+id/description"
        android:layout_below="@+id/code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/sync_request_code_desc"
        style="@style/textSmallLight"  />

</RelativeLayout>
